# gnn_trading

./: DEPLOYMENT.md  Dockerfile  ENHANCEMENT_SUMMARY.md  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
configs/: backtest_config.yaml  development_config.yaml  feature_config.yaml  graph_config.yaml  production_config.yaml  source_config.yaml  testing_config.yaml  train_config.yaml
docs/: BACKTEST_API.md  DATA_INGESTION.md  FEATURE_ENGINEERING.md  GRAPH_CONSTRUCTION.md  MODEL_TRAINING.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: gnn-trading-dashboard.json
scripts/: deploy.sh
src/gnn_trading/: __init__.py  cli.py
src/gnn_trading/api/: main.py
src/gnn_trading/backtest/: engine.py  risk.py
src/gnn_trading/config/: __init__.py
src/gnn_trading/data_pipeline/: feature_builder.py  ingest.py  quality.py
src/gnn_trading/graphs/: graph_builder.py  streaming.py
src/gnn_trading/models/: ensemble.py  tgat.py  trainer.py
src/gnn_trading/monitoring/: __init__.py
src/gnn_trading/optimization/: __init__.py
src/gnn_trading/utils/: __init__.py  logging.py  validation.py
tests/: conftest.py  test_backtest_engine.py  test_data_quality.py  test_ensemble.py  test_graph_builder.py  test_integration.py  test_tgat_model.py  test_trainer.py
